# Honing-Forecast

./: .env.development  .gitignore  .prettierignore  Cargo.toml  DETAILS.md  Details.md  README.md  Result all 390 CORRECTED.jsonl  Result bench 1 baseline _default, v1_local_0_2026-01-18 21-27-09 +00-00.jsonl  Result bench 10 better support size & min max .jsonl  Result bench 13 fixed brute pruning non zeroes instead of 0s.jsonl  Result bench 2 x2 bounds WRONG.jsonl  Result bench 2.2 newton instead of householder WRONG.jsonl  Result bench 4 CORRECTED.jsonl  Result bench 6 better guess, no limits.jsonl  Result bench 7 less alloc for brute.jsonl  Result bench 9 no more toggle.jsonl  Result full 390 new 1 iter _default, v1_local_0_2026-01-18 18-42-38 +00-00.jsonl  Result_default, v1_local_0.jsonl  Result_default, v1_local_0_2026-01-08 20-10-56 +00-00.jsonl  Result_default, v1_local_0_2026-01-08 20-11-38 +00-00.jsonl  Result_default, v1_local_0_2026-01-08 20-12-34 +00-00.jsonl  Result_default, v1_local_0_2026-01-09 02-40-30 +00-00.jsonl  Result_default, v1_local_0_2026-01-09 16-56-38 +00-00.jsonl  Result_default, v1_local_0_2026-01-09 16-58-16 +00-00.jsonl  Result_default, v1_local_0_2026-01-09 17-19-37 +00-00.jsonl  Result_default, v1_local_0_2026-01-09 20-30-25 +00-00.jsonl  Result_default, v1_local_0_2026-01-09 20-31-42 +00-00.jsonl  Result_default, v1_local_0_2026-01-09 20-48-32 +00-00.jsonl  Result_default, v1_local_0_2026-01-09 20-51-38 +00-00.jsonl  Result_default, v1_local_0_2026-01-09 20-52-55 +00-00.jsonl  Result_default, v1_local_0_2026-01-09 22-00-46 +00-00.jsonl  Result_default, v1_local_0_2026-01-09 22-05-09 +00-00.jsonl  Result_default, v1_local_0_2026-01-09 22-19-21 +00-00.jsonl  Result_default, v1_local_0_2026-01-11 18-51-52 +00-00.jsonl  Result_default, v1_local_0_2026-01-11 18-58-16 +00-00.jsonl  Result_default, v1_local_0_2026-01-11 20-25-55 +00-00.jsonl  Result_default, v1_local_0_2026-01-11 20-26-18 +00-00.jsonl  Result_default, v1_local_0_2026-01-11 20-32-09 +00-00.jsonl  Result_default, v1_local_0_2026-01-12 00-03-07 +00-00.jsonl  (+104 more)
crates/adv_hone_data/: Cargo.toml
crates/adv_hone_data/src/: lib.rs  main.rs  one_sim.rs  utils.rs
crates/arena/: Cargo.toml  README.md  autorun.ps1  test_cases.csv
crates/arena/Results/: v10_local_0.jsonl  v10_local_0_test_payloads.jsonl  v10_test_payloads.jsonl  v11_local_0_test_payloads.jsonl  v11_test_payloads.jsonl  v12_local_0_test_payloads.jsonl  v12_test_payloads.jsonl  v13_local_0_test_payloads.jsonl  v13_test_payloads.jsonl  v14_local_0.jsonl  v14_local_0_test_payloads.jsonl  v14_test_payloads.jsonl  v15_local_0_test_payloads.jsonl  v15_test_payloads.jsonl  v16_local_0.jsonl  v16_local_0_test_payloads.jsonl  v16_test_payloads.jsonl  v17_local_0_test_payloads.jsonl  v17_test_payloads.jsonl  v18_local_0.jsonl  v18_local_0_test_payloads.jsonl  v18_test_payloads.jsonl  v19_local_0.jsonl  v19_local_0_test_payloads.jsonl  v19_test_payloads.jsonl  v1_local_0.jsonl  v1_local_0_test_payloads.jsonl  v1_test_payloads.jsonl  v20_local_0.jsonl  v20_local_0_test_payloads.jsonl  v20_test_payloads.jsonl  v21_local_0_test_payloads.jsonl  v21_test_payloads.jsonl  v22_local_0_test_payloads.jsonl  v22_test_payloads.jsonl  v23_local_0.jsonl  v23_local_0_test_payloads.jsonl  v23_test_payloads.jsonl  v24_local_0_test_payloads.jsonl  v24_test_payloads.jsonl  (+48 more)
crates/arena/src/: lib.rs  main.rs  naive.rs  parse_test_cases.rs  timer.rs
crates/arena/src/engine/: mod.rs
crates/arena/test_payloads/: 12-20.json  21-22+25weap.json  only weap 22-25.json
crates/arena/test_payloads_bloated/: 12-18 1_00001.json  12-18 1_00002.json  12-18 1_00003.json  12-18 1_00004.json  12-18 1_00005.json  12-18 1_00006.json  12-18 1_00007.json  12-18 1_00008.json  12-18 1_00009.json  12-20 1_00011.json  12-20 1_00012.json  12-20 1_00014.json  12-20 1_00015.json  12-20 1_00017.json  12-20 1_00020.json  15-18 1_00021.json  15-18 1_00024.json  15-18 1_00025.json  15-18 1_00026.json  15-18 1_00027.json  15-18 1_00028.json  19-20 1_00031.json  19-20 1_00032.json  19-20 1_00033.json  19-20 1_00034.json  19-20 1_00036.json  19-20 1_00039.json  19-20 1_00040.json  19-20 my_.json  21-22+25weap_00041.json  21-22+25weap_00042.json  21-22+25weap_00044.json  21-22+25weap_00045.json  21-22+25weap_00046.json  21-22+25weap_00047.json  21-22+25weap_00049.json  21-22+25weap_00050.json  only weap 22-25_00051.json  only weap 22-25_00052.json  only weap 22-25_00053.json  (+7 more)
crates/arena/visualizer/: README.md  app.py  data_loader.py  processing.py
crates/core/: Cargo.toml
crates/core/src/: adv_hone.rs  average.rs  brute.rs  constants.rs  cost_to_chance.rs  energy.rs  exact_prob.rs  helpers.rs  histogram.rs  js_interface.rs  lib.rs  monte_carlo.rs  normal_honing_utils.rs  normal_sa.rs  parser.rs  payload.rs  performance.rs  run_tests.rs  saddlepoint_approximation.rs  send_progress.rs  special.rs  special_sa.rs  state.rs  state_bundle.rs  success_analysis.rs  support.rs  test_utils.rs  timer.rs  upgrade.rs  value_estimation.rs  visualizer.rs
crates/core/src/advanced_honing/: compute.rs  utils.rs
crates/core/src/constants/: Serca March 2026.json  T4 Feb 2026.json  T4 June 2026.json  accessor.rs  constants.rs  data.rs  juice_info.rs  mod.rs
crates/core/test_cases/: energy_test_42d5d71a1fe89606.json  energy_test_53600a1c818ef0c5.json  energy_test_6e1f3c25110a790e.json  energy_test_77ca41b9016aa9eb.json  energy_test_96f2ca9a0a6b8b69.json  energy_test_99cb5a6755120836.json  energy_test_a0311f42f46ef26e.json  saddlepoint_approximation_test_222b2312f425fb2d.json  special_sa_test_147cd6c65977af63.json  special_sa_test_4c7865143d414293.json  special_sa_test_9a9d0f49d7d68fab.json  special_sa_test_eec20f3c3a4fe22d.json
crates/scanner/: Cargo.toml
crates/scanner/src/: buffer.rs  constants.rs  image_utils.rs  lib.rs  scanner.rs  scanner_state.rs
crates/wasm/: Cargo.toml
crates/wasm/.cargo/: config.toml
crates/wasm/pkg/: hf_wasm.d.ts  hf_wasm.js  hf_wasm_bg.wasm  hf_wasm_bg.wasm.d.ts  package.json
crates/wasm/src/: cost_to_chance.rs  histogram.rs  lib.rs  success_analysis.rs
(+1241 files in other folders)
