[package]
name = "honing-forecast"
version = "0.1.0"
edition = "2024"

[lib]
# Build both a cdylib for wasm-bindgen usage and an rlib so the local binary can
# link against the library target during `cargo build`.
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"   # convert JsValue <-> serde types
rand = "0.8"
rand_distr = "0.4"
weighted_rand = "0.4.2"
imp = "0.1.0"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0.143"
js-sys = "0.3.78"


[dev-dependencies]
wasm-bindgen-test = "0.3.0"