[package]
name = "honing-forecast"
version = "0.1.0"
edition = "2024"


[lib]
# Build both a cdylib for wasm-bindgen usage and an rlib so the local binary can
# link against the library target during `cargo build`.
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"   # convert JsValue <-> serde types
rand = "0.8.5"
js-sys = "0.3.78"
weighted_rand = "0.4.2"
getrandom ={version="0.2", features=["js"]}
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
assert_float_eq = "1.1.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cost_to_chance"
harness = false