[package]
name = "honing-forecast"
version = "0.1.0"
edition = "2024"
description = "Honing calculator for Lost Ark"
readme = "README.md"
repository = "https://github.com/Kenivia/Honing-Forecast"
license = "AGPL-3.0-or-later"


[lib]
# Build both a cdylib for wasm-bindgen usage and an rlib so the local binary can
# link against the library target during `cargo build`.
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"   # convert JsValue <-> serde types
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3.78"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
assert_float_eq = "1.1.4"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

