[package]
name = "hf-adv-hone-data"
edition = "2024"
description = "Honing calculator for Lost Ark"
repository = "https://github.com/Kenivia/Honing-Forecast"
license = "AGPL-3.0-or-later"
version = "0.1.0"

[dependencies]
serde = {version="1.0.228",features = ["derive"] }
serde_json = "1.0.145"
rayon = "1.11.0"
hf-core = { path = "../core", default-features = false} 
rand = "0.9"
itertools = "0.14.0"
chrono =   "0.4.42"
bytemuck = {version="1.25.0", features=["derive"]}