[package]
name = "hf-arena"
edition = "2024"
description = "Honing calculator for Lost Ark"
repository = "https://github.com/Kenivia/Honing-Forecast"
license = "AGPL-3.0-or-later"

[dependencies]
chrono = "0.4.42"
hf-core = { path = "../core" }
rand = "0.9.2"
rayon = "1.11.0"
serde = "1.0.228"
serde_json = "1.0.145"
web-sys = { version = "0.3", features = ["console","Performance","Window"] }




