[package]
name = "hf-arena"
edition = "2024"
description = "Honing calculator for Lost Ark"
repository = "https://github.com/Kenivia/Honing-Forecast"
license = "AGPL-3.0-or-later"

[dependencies]
hf-core = { path = "../core", features=["run_tests"]}
rand = "0.9"
serde_json = "1.0"

[features]
v1=["hf-core/v1"]
v2=["hf-core/v2"]
v3=["hf-core/v3"]
v4=["hf-core/v4"]
v5=["hf-core/v5"]
v6=["hf-core/v6"]
v7=["hf-core/v7"]
v8=["hf-core/v8"]
v9=["hf-core/v9"]
v10=["hf-core/v10"]
v11=["hf-core/v11"]
v12=["hf-core/v12"]
v13=["hf-core/v13"]
v14=["hf-core/v14"]
v15=["hf-core/v15"]
v16=["hf-core/v16"]
v17=["hf-core/v17"]
v18=["hf-core/v18"]
v19=["hf-core/v19"]
v20=["hf-core/v20"]
v21=["hf-core/v21"]
v22=["hf-core/v22"]
v23=["hf-core/v23"]
v24=["hf-core/v24"]
v25=["hf-core/v25"]
v26=["hf-core/v26"]
v27=["hf-core/v27"]
v28=["hf-core/v28"]
v29=["hf-core/v29"]
v30=["hf-core/v30"]
v31=["hf-core/v31"]
v32=["hf-core/v32"]
v33=["hf-core/v33"]
v34=["hf-core/v34"]
v35=["hf-core/v35"]
default=[]
