[package]
name = "hf-arena"
edition = "2024"
description = "Honing calculator for Lost Ark"
repository = "https://github.com/Kenivia/Honing-Forecast"
license = "AGPL-3.0-or-later"
version = "0.1.0"

[dependencies]
hf-core = { path = "../core", default-features = false, features=["run_tests"]} 
rand = "0.9"
serde_json = "1.0"

[features]
v35=["hf-core/v35"]
default=[]
