[package]
name = "hf-core"
edition = "2024"
description = "Honing calculator for Lost Ark"
repository = "https://github.com/Kenivia/Honing-Forecast"
license = "AGPL-3.0-or-later"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }
assert_float_eq = "1.1.4"
itertools = "0.14.0"
rayon = "1.11.0"
fast_polynomial = "0.4.0"
statrs = "0.18.0"
num = "0.4.3"
quad-rs = "0.2.3"
rootfinder = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
