[package]
name = "hf-core"
edition = "2024"
description = "Honing calculator for Lost Ark"
repository = "https://github.com/Kenivia/Honing-Forecast"
license = "AGPL-3.0-or-later"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.9"

itertools = "0.14.0"

statrs = {version = "0.18.0", default-features = false}
num = "0.4.3"

getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
web-sys = { version = "0.3", features = ["console"] }
serde-wasm-bindgen = "0.6"  
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }