[package]
name = "hf-core"
edition = "2024"
description = "Honing calculator for Lost Ark"
repository = "https://github.com/Kenivia/Honing-Forecast"
license = "AGPL-3.0-or-later"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.9"
itertools = "0.14.0"
statrs = {version = "0.18.0", default-features = false}
num = "0.4.3"
getrandom = { version = "0.3"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ordered-float = "5.1.0"
cfg-if = "1.0"
priority-queue = "2.7.0"

chrono = { version =  "0.4.42", optional = true}
rayon = { version = "1.11.0", optional = true}


web-sys = { version = "0.3", features = ["console"], optional = true}
serde-wasm-bindgen = {version="0.6"  , optional = true}
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] , optional = true}

[features]
v1=[]
v2=[]
v3=[]
v4=[]
v5=[]
v6=[]
v7=[]
v8=[]
v9=[]
v10=[]
v11=[]
v12=[]
v13=[]
v14=[]
v15=[]
v16=[]
v17=[]
v18=[]
v19=[]
v20=[]
v21=[]
v22=[]
v23=[]
v24=[]
v25=[]
v26=[]
v27=[]
v28=[]
v29=[]
v30=[]
v31=[]
v32=[]
v33=[]
v34=[]
v35=[]
run_tests=["rayon", "chrono"]
wasm=["web-sys","serde-wasm-bindgen", "wasm-bindgen", "getrandom/wasm_js" ]
default=["v35","wasm"]