[package]
name = "hf-scanner"
edition = "2024"
description = "Honing calculator for Lost Ark"
repository = "https://github.com/Kenivia/Honing-Forecast"
license = "AGPL-3.0-or-later"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
serde_json = "1.0"
either ={version = "1.16", features=["serde"]}
ahash = {version = "0.8", features=["serde"]}

