[package]
name = "hf-wasm"
edition = "2024"
description = "Honing calculator for Lost Ark"
repository = "https://github.com/Kenivia/Honing-Forecast"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
hf-core = { path = "../core"}
hf-arena={ path = "../arena" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"
serde-wasm-bindgen = "0.6"  
js-sys = "0.3.78"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

